--- a/client/src/styles/scss/header.scss
+++ b/client/src/styles/scss/header.scss
@@ -11,12 +11,10 @@ header{
 	left: 0;
 	z-index: 2;
 	width: 100%;
-	max-height: 110px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	color: #fff;
-	padding: 35px 100px 25px 0;
 }
 
 header #city-input {
@@ -58,12 +56,13 @@ header #location-search {
 	}
 }
 
-@media (max-width: 700px){
+@media (max-width: 600px){
 	header{
-		flex-direction: column;		
-	}
+		flex-direction: column;
+		padding: 0;
 
-	header h2{
-		margin-bottom: 15px;
+		.main-btn {
+			padding: 1px;
+		}
 	}
 }
